--- a/environnement/bibliodrive/backoffice/templates/book/book_list.html
+++ b/environnement/bibliodrive/backoffice/templates/book/book_list.html
@@ -35,8 +35,8 @@
         </div>
 
         <div class="flex">
-            <!-- Sidebar -->
-            <div class="w-64 mr-8">
+            <!-- Sidebar - Ajout des classes pour la rendre fixe -->
+            <div class="w-64 mr-8 sticky top-4 self-start h-fit">
                 <div class="bg-white rounded-xl shadow-lg p-6">
                     <h2 class="text-xl font-semibold mb-4 text-gray-800">Genres</h2>
                     <ul class="space-y-2">
