--- a/environnement/bibliodrive/backoffice/templates/book/book_historique.html
+++ b/environnement/bibliodrive/backoffice/templates/book/book_historique.html
@@ -33,9 +33,8 @@
             </td>
             <td class="px-6 py-4 whitespace-nowrap">
               <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full
-                                {% if reservation.status == 'ACTIVE' %}bg-green-100 text-green-800
-                                {% elif reservation.status == 'CANCELLED' %}bg-red-100 text-red-800
-                                {% else %}bg-gray-100 text-gray-800{% endif %}">
+                    {% if reservation.status == 'ACTIVE' %}bg-green-100 text-green-800
+                    {% else %}bg-red-100 text-red-800{% endif %}">
                 {{ reservation.get_status_display }}
               </span>
             </td>
