--- a/environnement/bibliodrive/backoffice/templates/base.html
+++ b/environnement/bibliodrive/backoffice/templates/base.html
@@ -43,7 +43,7 @@
                   class="fas fa-bookmark text-slate-400 group-hover:text-indigo-600 transition-colors duration-200"></i>
                 <span>Titre</span>
               </a>
-              {% if user.is_authenticated and user.is_superuser %}
+              {% if user.is_authenticated %}
               <a href="{% url 'book_historique' %}"
                 class="text-slate-600 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium transition-colors duration-200 ease-in-out flex items-center space-x-2 group">
                 <i class="fas fa-history text-slate-400 group-hover:text-indigo-600 transition-colors duration-200"></i>
