--- a/environnement/bibliodrive/backoffice/templates/registration/accueil.html
+++ b/environnement/bibliodrive/backoffice/templates/registration/accueil.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 <div class="relative min-h-screen">
-    <!-- Conteneur particles en arrière-plan absolu -->
     <div id="particles-js" class="absolute inset-0"></div>
 
     <!-- Contenu principal -->
@@ -80,16 +79,15 @@
     </div>
 </div>
 
-<!-- Scripts à la fin -->
+<!-- Script -->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
-    // Vérifier que le script est chargé
     window.onload = function () {
         if (typeof particlesJS !== 'undefined') {
             particlesJS('particles-js', {
                 particles: {
                     number: {
-                        value: 150,
+                        value: 80,
                         density: {
                             enable: true,
                             value_area: 800
